--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
+    "express": "^4.17.1",
     "node-telegram-bot-api": "^0.40.0",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   },
   "engines": {
