--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.1",
+    "jsonapi-parse": "^2.0.0",
     "node-telegram-bot-api": "^0.40.0",
     "path": "^0.12.7",
     "request": "^2.88.2"
