--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -16,11 +15,14 @@
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.1",
     "jsonapi-parse": "^2.0.0",
+    "kitsu": "^8.0.5",
     "node-telegram-bot-api": "^0.40.0",
     "path": "^0.12.7",
     "request": "^2.88.2"
   },
   "engines": {
-    "node": "8.10.0"
-  }
+    "node": "12.16.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
