--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "kitsu": "^8.0.5",
     "node-telegram-bot-api": "^0.40.0",
     "path": "^0.12.7",
+    "html-to-text": "^5.1.1",
     "request": "^2.88.2"
   },
   "engines": {
